--- a/PSO Full Revamp.ipynb
+++ b/PSO Full Revamp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,19 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12, 224, 224, 1)\n",
-      "(12, 1)\n",
-      "Train Shape  (8, 224, 224, 3)\n",
-      "Train Label  (8, 1)\n",
-      "Test Shape  (4, 224, 224, 3)\n",
-      "Test Label  (4, 1)\n"
+      "(997, 224, 224, 1)\n",
+      "(997, 1)\n",
+      "Class 0 :  493\n",
+      "Class 0 :  504\n",
+      "Train Shape  (667, 224, 224, 3)\n",
+      "Train Label  (667, 1)\n",
+      "Test Shape  (330, 224, 224, 3)\n",
+      "Test Label  (330, 1)\n"
      ]
     }
    ],
@@ -123,6 +125,8 @@
     "\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
+    "print(\"Class 0 : \",tuple(y).count(0))\n",
+    "print(\"Class 0 : \",tuple(y).count(1))\n",
     "train_data, test_data, train_target, test_target = train_test_split(X, y, test_size=0.33)\n",
     "\n",
     "\n",
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +154,8 @@
     "    #Load the VGG19 model, top layers off\n",
     "    baseModel = VGG19(weights=\"imagenet\",include_top=False,input_tensor=Input(shape=(224,224,3)))\n",
     "    INIT_LR= 1e-2 # 0.001 \n",
-    "    EPOCHS= 10\n",
-    "    BS= 2\n",
+    "    EPOCHS= 1\n",
+    "    BS= 8\n",
     "    \n",
     "    print(\"Running Experiment : \",settings)\n",
     "    print(\"layer-1:\",settings[0])\n",
@@ -203,7 +207,7 @@
     "        steps_per_epoch=len(train_data)//BS,\n",
     "        validation_data=(test_data,test_target),\n",
     "        validation_steps=len(test_data)//BS,\n",
-    "        epochs=1,\n",
+    "        epochs=EPOCHS,\n",
     "        callbacks=[checkpoint])\n",
     "    \n",
     "    num_val_samples = len(test_data)\n",
@@ -253,183 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Popualtion Shape :  (5, 11)\n",
-      "[40.   24.    8.   48.    0.3   0.13  0.16  0.9   1.    0.    0.  ]\n",
+      "Popualtion Shape :  (2, 11)\n",
+      "[48.    8.   40.   16.    0.2   0.71  0.29  0.9   1.    0.    0.  ]\n",
       "Results Acc: 0.0\n",
       "Results Loss: 1.0\n",
-      "Population Results Saved :  EXPERIMENT-1616740111/PopualtionData_5_TIME1616740112.csv\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   1.    0.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   1.    0.    0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   1.    0.    0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   1.    0.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]]\n",
-      "Running Experiment :  [64.    8.   48.   56.    0.2   0.39  0.3   0.9   1.    0.    0.  ]\n",
-      "layer-1: 64.0\n",
+      "Population Results Saved :  EXPERIMENT-1616742435/PopualtionData_2_TIME1616742436.csv\n",
+      "[[56.    8.   24.   16.    0.4   0.87  0.15  0.9   1.    0.    0.  ]\n",
+      " [48.    8.   40.   16.    0.2   0.71  0.29  0.9   1.    0.    0.  ]]\n",
+      "Running Experiment :  [56.    8.   24.   16.    0.4   0.87  0.15  0.9   1.    0.    0.  ]\n",
+      "layer-1: 56.0\n",
       "[INFO] compiling model....\n",
       "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616740111/64-8-48-56-DP02-VGG19.h5\n",
-      "4/4 [==============================] - ETA: 0s - loss: 1.0581 - accuracy: 0.7500\n",
-      "Epoch 00001: val_accuracy improved from -inf to 1.00000, saving model to EXPERIMENT-1616740111/64-8-48-56-DP02-VGG19.h5\n",
-      "4/4 [==============================] - 1s 362ms/step - loss: 1.0581 - accuracy: 0.7500 - val_loss: 0.6934 - val_accuracy: 1.0000\n",
-      "4\n",
-      "[INFO] evaluating model....\n",
-      "1/1 [==============================] - 0s 1000us/step - loss: 0.6934 - accuracy: 1.0000\n",
-      "[[0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 0.6933625340461731\n",
-      "val_acc: 1.0\n",
-      "Validation Loss  0.6933625340461731\n",
-      "Validation Acc  1.0\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   1.    0.    0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   1.    0.    0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   1.    0.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]]\n",
-      "Saved Progress [64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      "Running Experiment :  [40.   24.    8.   48.    0.3   0.13  0.16  0.9   1.    0.    0.  ]\n",
-      "layer-1: 40.0\n",
-      "[INFO] compiling model....\n",
-      "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616740111/40-24-8-48-DP03-VGG19.h5\n",
-      "4/4 [==============================] - ETA: 0s - loss: 0.7990 - accuracy: 0.3750\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.50000, saving model to EXPERIMENT-1616740111/40-24-8-48-DP03-VGG19.h5\n",
-      "4/4 [==============================] - 2s 380ms/step - loss: 0.7990 - accuracy: 0.3750 - val_loss: 4.0479 - val_accuracy: 0.5000\n",
-      "4\n",
-      "[INFO] evaluating model....\n",
-      "1/1 [==============================] - 0s 2ms/step - loss: 4.0479 - accuracy: 0.5000\n",
-      "[[0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 4.047893524169922\n",
-      "val_acc: 0.5\n",
-      "Validation Loss  4.047893524169922\n",
-      "Validation Acc  0.5\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   1.    0.    0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   1.    0.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]]\n",
-      "Saved Progress [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      "Running Experiment :  [16.    8.   48.   64.    0.4   0.38  0.18  0.9   1.    0.    0.  ]\n",
-      "layer-1: 16.0\n",
-      "[INFO] compiling model....\n",
-      "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616740111/16-8-48-64-DP04-VGG19.h5\n",
-      "4/4 [==============================] - ETA: 0s - loss: 0.7183 - accuracy: 0.6250\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.75000, saving model to EXPERIMENT-1616740111/16-8-48-64-DP04-VGG19.h5\n",
-      "4/4 [==============================] - 2s 387ms/step - loss: 0.7183 - accuracy: 0.6250 - val_loss: 4.2104 - val_accuracy: 0.7500\n",
-      "4\n",
-      "[INFO] evaluating model....\n",
-      "1/1 [==============================] - 0s 999us/step - loss: 4.2104 - accuracy: 0.7500\n",
-      "[[0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 4.210371017456055\n",
-      "val_acc: 0.75\n",
-      "Validation Loss  4.210371017456055\n",
-      "Validation Acc  0.75\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   4.21  0.75  0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   1.    0.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]]\n",
-      "Saved Progress [16.    8.   48.   64.    0.4   0.38  0.18  0.9   4.21  0.75  0.  ]\n",
-      "Running Experiment :  [40.   64.   32.   24.    0.1   0.86  0.27  0.9   1.    0.    0.  ]\n",
-      "layer-1: 40.0\n",
-      "[INFO] compiling model....\n",
-      "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616740111/40-64-32-24-DP01-VGG19.h5\n",
-      "4/4 [==============================] - ETA: 0s - loss: 1.0539 - accuracy: 0.3750\n",
-      "Epoch 00001: val_accuracy improved from -inf to 1.00000, saving model to EXPERIMENT-1616740111/40-64-32-24-DP01-VGG19.h5\n",
-      "4/4 [==============================] - 2s 409ms/step - loss: 1.0539 - accuracy: 0.3750 - val_loss: 7.6685 - val_accuracy: 1.0000\n",
-      "4\n",
-      "[INFO] evaluating model....\n",
-      "1/1 [==============================] - 0s 2ms/step - loss: 7.6685 - accuracy: 1.0000\n",
-      "[[0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 7.668546676635742\n",
-      "val_acc: 1.0\n",
-      "Validation Loss  7.668546676635742\n",
-      "Validation Acc  1.0\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   4.21  0.75  0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   7.67  1.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]]\n",
-      "Saved Progress [40.   64.   32.   24.    0.1   0.86  0.27  0.9   7.67  1.    0.  ]\n",
-      "Running Experiment :  [40.   48.   24.   48.    0.3   0.21  0.32  0.9   1.    0.    0.  ]\n",
-      "layer-1: 40.0\n",
-      "[INFO] compiling model....\n",
-      "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616740111/40-48-24-48-DP03-VGG19.h5\n",
-      "4/4 [==============================] - ETA: 0s - loss: 3.6220 - accuracy: 0.5000\n",
-      "Epoch 00001: val_accuracy improved from -inf to 1.00000, saving model to EXPERIMENT-1616740111/40-48-24-48-DP03-VGG19.h5\n",
-      "4/4 [==============================] - 1s 361ms/step - loss: 3.6220 - accuracy: 0.5000 - val_loss: 5.9141 - val_accuracy: 1.0000\n",
-      "4\n",
-      "[INFO] evaluating model....\n",
-      "1/1 [==============================] - 0s 1ms/step - loss: 5.9141 - accuracy: 1.0000\n",
-      "[[0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 5.914085865020752\n",
-      "val_acc: 1.0\n",
-      "Validation Loss  5.914085865020752\n",
-      "Validation Acc  1.0\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   4.21  0.75  0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   7.67  1.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   5.91  1.    0.  ]]\n",
-      "Saved Progress [40.   48.   24.   48.    0.3   0.21  0.32  0.9   5.91  1.    0.  ]\n",
-      "[[64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    0.  ]\n",
-      " [40.   24.    8.   48.    0.3   0.13  0.16  0.9   4.05  0.5   0.  ]\n",
-      " [16.    8.   48.   64.    0.4   0.38  0.18  0.9   4.21  0.75  0.  ]\n",
-      " [40.   64.   32.   24.    0.1   0.86  0.27  0.9   7.67  1.    0.  ]\n",
-      " [40.   48.   24.   48.    0.3   0.21  0.32  0.9   5.91  1.    0.  ]]\n",
-      "1 -Calculate Fitness : 2.55\n",
-      "2 -Calculate Fitness : -14.75\n",
-      "3 -Calculate Fitness : -15.3\n",
-      "4 -Calculate Fitness : -32.35\n",
-      "5 -Calculate Fitness : -23.55\n",
-      "Best Model Found [64.    8.   48.   56.    0.2   0.39  0.3   0.9   0.69  1.    2.55]\n",
-      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
-      "[[ 64.     8.    48.    56.     0.2    0.39   0.3    0.9    0.69   1.\n",
-      "    2.55]\n",
-      " [ 40.    24.     8.    48.     0.3    0.13   0.16   0.9    4.05   0.5\n",
-      "  -14.75]\n",
-      " [ 16.     8.    48.    64.     0.4    0.38   0.18   0.9    4.21   0.75\n",
-      "  -15.3 ]\n",
-      " [ 40.    64.    32.    24.     0.1    0.86   0.27   0.9    7.67   1.\n",
-      "  -32.35]\n",
-      " [ 40.    48.    24.    48.     0.3    0.21   0.32   0.9    5.91   1.\n",
-      "  -23.55]]\n",
-      "Updates New Position adn Velocity\n",
-      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
-      "[[ 64.     8.    48.    56.     0.2    0.05   0.35   0.9    0.69   1.\n",
-      "    2.55]\n",
-      " [ 40.    24.     8.    48.     0.3    0.05   0.21   0.9    4.05   0.5\n",
-      "  -14.75]\n",
-      " [ 16.     8.    48.    64.     0.4    0.25   0.43   0.9    4.21   0.75\n",
-      "  -15.3 ]\n",
-      " [ 40.    64.    32.    24.     0.1    0.6    0.86   0.9    7.67   1.\n",
-      "  -32.35]\n",
-      " [ 40.    48.    24.    48.     0.3   -0.12   0.2    0.9    5.91   1.\n",
-      "  -23.55]]\n",
-      "Population Results Saved :  EXPERIMENT-1616740111/Updated_PopualtionData_5_TIME1616740112.csv\n"
+      "[INFO] model file:  EXPERIMENT-1616742435/56-8-24-16-DP04-VGG19.h5\n",
+      "18/83 [=====>........................] - ETA: 50s - loss: 0.6955 - accuracy: 0.5347"
      ]
     }
    ],
@@ -439,7 +286,7 @@
     "\n",
     "debug = False\n",
     "#Initialize Population  [64, 32, 16, 16, 0.1, P, V, W, loss,accuracy , fitness]\n",
-    "popSize = 5\n",
+    "popSize = 2\n",
     "for i in range(popSize):\n",
     "    \n",
     "    dropout = round(random.uniform(0.1,0.5), 1)\n",
@@ -566,6 +413,13 @@
     "print(\"Population Results Saved : \",csvFileName )\n",
     "np.savetxt(csvFileName, popdata, delimiter=\",\", fmt='%f')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
