Update batch sizes

--- a/PSO Full Revamp.ipynb
+++ b/PSO Full Revamp.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,11 +110,17 @@
       "(997, 224, 224, 1)\n",
       "(997, 1)\n",
       "Class 0 :  493\n",
-      "Class 0 :  504\n",
-      "Train Shape  (667, 224, 224, 3)\n",
-      "Train Label  (667, 1)\n",
-      "Test Shape  (330, 224, 224, 3)\n",
-      "Test Label  (330, 1)\n"
+      "Class 1 :  504\n",
+      "Train Shape  (897, 224, 224, 3)\n",
+      "Train Label  (897, 1)\n",
+      "Test Shape  (100, 224, 224, 3)\n",
+      "Test Label  (100, 1)\n",
+      "Training Distribution\n",
+      "Class 0 :  444\n",
+      "Class 1 :  453\n",
+      "Test Distribution\n",
+      "Class 0 :  49\n",
+      "Class 1 :  51\n"
      ]
     }
    ],
@@ -126,8 +132,8 @@
     "print(X.shape)\n",
     "print(y.shape)\n",
     "print(\"Class 0 : \",tuple(y).count(0))\n",
-    "print(\"Class 0 : \",tuple(y).count(1))\n",
-    "train_data, test_data, train_target, test_target = train_test_split(X, y, test_size=0.33)\n",
+    "print(\"Class 1 : \",tuple(y).count(1))\n",
+    "train_data, test_data, train_target, test_target = train_test_split(X, y, test_size=0.10)\n",
     "\n",
     "\n",
     "train_data = train_data.reshape((train_data.shape[0], 224, 224, 1))\n",
@@ -139,12 +145,19 @@
     "print(\"Train Shape \",train_data.shape)\n",
     "print(\"Train Label \",train_target.shape)\n",
     "print(\"Test Shape \",test_data.shape)\n",
-    "print(\"Test Label \",test_target.shape)"
+    "print(\"Test Label \",test_target.shape)\n",
+    "print(\"Training Distribution\")\n",
+    "print(\"Class 0 : \",tuple(train_target).count(0))\n",
+    "print(\"Class 1 : \",tuple(train_target).count(1))\n",
+    "\n",
+    "print(\"Test Distribution\")\n",
+    "print(\"Class 0 : \",tuple(test_target).count(0))\n",
+    "print(\"Class 1 : \",tuple(test_target).count(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +168,8 @@
     "    baseModel = VGG19(weights=\"imagenet\",include_top=False,input_tensor=Input(shape=(224,224,3)))\n",
     "    INIT_LR= 1e-2 # 0.001 \n",
     "    EPOCHS= 1\n",
-    "    BS= 8\n",
+    "    BS= 16\n",
+    "    \n",
     "    \n",
     "    print(\"Running Experiment : \",settings)\n",
     "    print(\"layer-1:\",settings[0])\n",
@@ -257,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,18 +279,261 @@
      "output_type": "stream",
      "text": [
       "Popualtion Shape :  (2, 11)\n",
-      "[48.    8.   40.   16.    0.2   0.71  0.29  0.9   1.    0.    0.  ]\n",
+      "[32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]\n",
       "Results Acc: 0.0\n",
       "Results Loss: 1.0\n",
-      "Population Results Saved :  EXPERIMENT-1616742435/PopualtionData_2_TIME1616742436.csv\n",
-      "[[56.    8.   24.   16.    0.4   0.87  0.15  0.9   1.    0.    0.  ]\n",
-      " [48.    8.   40.   16.    0.2   0.71  0.29  0.9   1.    0.    0.  ]]\n",
-      "Running Experiment :  [56.    8.   24.   16.    0.4   0.87  0.15  0.9   1.    0.    0.  ]\n",
+      "Population Results Saved :  EXPERIMENT-1616742435/PopualtionData_2_TIME1616742807.csv\n",
+      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   1.    0.    0.  ]\n",
+      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]]\n",
+      "Running Experiment :  [56.   24.   40.   40.    0.3   0.5   0.11  0.9   1.    0.    0.  ]\n",
       "layer-1: 56.0\n",
       "[INFO] compiling model....\n",
       "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616742435/56-8-24-16-DP04-VGG19.h5\n",
-      "18/83 [=====>........................] - ETA: 50s - loss: 0.6955 - accuracy: 0.5347"
+      "[INFO] model file:  EXPERIMENT-1616742435/56-24-40-40-DP03-VGG19.h5\n",
+      "56/56 [==============================] - ETA: 0s - loss: 0.6980 - accuracy: 0.4722\n",
+      "Epoch 00001: val_accuracy improved from -inf to 0.00000, saving model to EXPERIMENT-1616742435/56-24-40-40-DP03-VGG19.h5\n",
+      "56/56 [==============================] - 97s 2s/step - loss: 0.6980 - accuracy: 0.4722 - val_loss: 0.8306 - val_accuracy: 0.0000e+00\n",
+      "100\n",
+      "[INFO] evaluating model....\n",
+      "4/4 [==============================] - 6s 2s/step - loss: 0.8306 - accuracy: 0.0000e+00\n",
+      "[[1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]]\n",
+      "val_loss: 0.8306411504745483\n",
+      "val_acc: 0.0\n",
+      "Validation Loss  0.8306411504745483\n",
+      "Validation Acc  0.0\n",
+      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
+      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]]\n",
+      "Saved Progress [56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
+      "Running Experiment :  [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]\n",
+      "layer-1: 32.0\n",
+      "[INFO] compiling model....\n",
+      "[INFO] Training the model....\n",
+      "[INFO] model file:  EXPERIMENT-1616742435/32-40-8-48-DP02-VGG19.h5\n",
+      "56/56 [==============================] - ETA: 0s - loss: 0.6932 - accuracy: 0.4824\n",
+      "Epoch 00001: val_accuracy improved from -inf to 1.00000, saving model to EXPERIMENT-1616742435/32-40-8-48-DP02-VGG19.h5\n",
+      "56/56 [==============================] - 101s 2s/step - loss: 0.6932 - accuracy: 0.4824 - val_loss: 0.6931 - val_accuracy: 1.0000\n",
+      "100\n",
+      "[INFO] evaluating model....\n",
+      "4/4 [==============================] - 7s 2s/step - loss: 0.6931 - accuracy: 1.0000\n",
+      "[[1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]]\n",
+      "val_loss: 0.6931473016738892\n",
+      "val_acc: 1.0\n",
+      "Validation Loss  0.6931473016738892\n",
+      "Validation Acc  1.0\n",
+      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
+      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]]\n",
+      "Saved Progress [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]\n",
+      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
+      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]]\n",
+      "1 -Calculate Fitness : 0.85\n",
+      "2 -Calculate Fitness : 2.55\n",
+      "Best Model Found [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    2.55]\n",
+      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
+      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.85]\n",
+      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    2.55]]\n",
+      "Updates New Position adn Velocity\n",
+      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
+      "[[56.   24.   40.   40.    0.3   0.42  0.53  0.9   0.83  0.    0.85]\n",
+      " [32.   40.    8.   48.    0.2  -0.35  0.62  0.9   0.69  1.    2.55]]\n",
+      "Population Results Saved :  EXPERIMENT-1616742435/Updated_PopualtionData_2_TIME1616742807.csv\n"
      ]
     }
    ],
