--- a/PSO Full Revamp.ipynb
+++ b/PSO Full Revamp.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,11 +116,11 @@
       "Test Shape  (100, 224, 224, 3)\n",
       "Test Label  (100, 1)\n",
       "Training Distribution\n",
-      "Class 0 :  444\n",
-      "Class 1 :  453\n",
+      "Class 0 :  436\n",
+      "Class 1 :  461\n",
       "Test Distribution\n",
-      "Class 0 :  49\n",
-      "Class 1 :  51\n"
+      "Class 0 :  57\n",
+      "Class 1 :  43\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
     "    baseModel = VGG19(weights=\"imagenet\",include_top=False,input_tensor=Input(shape=(224,224,3)))\n",
     "    INIT_LR= 1e-2 # 0.001 \n",
     "    EPOCHS= 1\n",
-    "    BS= 16\n",
+    "    BS= 2\n",
     "    \n",
     "    \n",
     "    print(\"Running Experiment : \",settings)\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,261 +279,18 @@
      "output_type": "stream",
      "text": [
       "Popualtion Shape :  (2, 11)\n",
-      "[32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]\n",
+      "[32.   16.   24.   56.    0.3   0.37  0.9   0.9   1.    0.    0.  ]\n",
       "Results Acc: 0.0\n",
       "Results Loss: 1.0\n",
-      "Population Results Saved :  EXPERIMENT-1616742435/PopualtionData_2_TIME1616742807.csv\n",
-      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   1.    0.    0.  ]\n",
-      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]]\n",
-      "Running Experiment :  [56.   24.   40.   40.    0.3   0.5   0.11  0.9   1.    0.    0.  ]\n",
-      "layer-1: 56.0\n",
+      "Population Results Saved :  EXPERIMENT-1617194310/PopualtionData_2_TIME1617194333.csv\n",
+      "[[64.   40.   64.   16.    0.2   0.18  0.8   0.9   1.    0.    0.  ]\n",
+      " [32.   16.   24.   56.    0.3   0.37  0.9   0.9   1.    0.    0.  ]]\n",
+      "Running Experiment :  [64.   40.   64.   16.    0.2   0.18  0.8   0.9   1.    0.    0.  ]\n",
+      "layer-1: 64.0\n",
       "[INFO] compiling model....\n",
       "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616742435/56-24-40-40-DP03-VGG19.h5\n",
-      "56/56 [==============================] - ETA: 0s - loss: 0.6980 - accuracy: 0.4722\n",
-      "Epoch 00001: val_accuracy improved from -inf to 0.00000, saving model to EXPERIMENT-1616742435/56-24-40-40-DP03-VGG19.h5\n",
-      "56/56 [==============================] - 97s 2s/step - loss: 0.6980 - accuracy: 0.4722 - val_loss: 0.8306 - val_accuracy: 0.0000e+00\n",
-      "100\n",
-      "[INFO] evaluating model....\n",
-      "4/4 [==============================] - 6s 2s/step - loss: 0.8306 - accuracy: 0.0000e+00\n",
-      "[[1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 0.8306411504745483\n",
-      "val_acc: 0.0\n",
-      "Validation Loss  0.8306411504745483\n",
-      "Validation Acc  0.0\n",
-      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
-      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]]\n",
-      "Saved Progress [56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
-      "Running Experiment :  [32.   40.    8.   48.    0.2   0.51  0.97  0.9   1.    0.    0.  ]\n",
-      "layer-1: 32.0\n",
-      "[INFO] compiling model....\n",
-      "[INFO] Training the model....\n",
-      "[INFO] model file:  EXPERIMENT-1616742435/32-40-8-48-DP02-VGG19.h5\n",
-      "56/56 [==============================] - ETA: 0s - loss: 0.6932 - accuracy: 0.4824\n",
-      "Epoch 00001: val_accuracy improved from -inf to 1.00000, saving model to EXPERIMENT-1616742435/32-40-8-48-DP02-VGG19.h5\n",
-      "56/56 [==============================] - 101s 2s/step - loss: 0.6932 - accuracy: 0.4824 - val_loss: 0.6931 - val_accuracy: 1.0000\n",
-      "100\n",
-      "[INFO] evaluating model....\n",
-      "4/4 [==============================] - 7s 2s/step - loss: 0.6931 - accuracy: 1.0000\n",
-      "[[1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]]\n",
-      "val_loss: 0.6931473016738892\n",
-      "val_acc: 1.0\n",
-      "Validation Loss  0.6931473016738892\n",
-      "Validation Acc  1.0\n",
-      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
-      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]]\n",
-      "Saved Progress [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]\n",
-      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.  ]\n",
-      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    0.  ]]\n",
-      "1 -Calculate Fitness : 0.85\n",
-      "2 -Calculate Fitness : 2.55\n",
-      "Best Model Found [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    2.55]\n",
-      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
-      "[[56.   24.   40.   40.    0.3   0.5   0.11  0.9   0.83  0.    0.85]\n",
-      " [32.   40.    8.   48.    0.2   0.51  0.97  0.9   0.69  1.    2.55]]\n",
-      "Updates New Position adn Velocity\n",
-      " L1     L2     L3    L4    DP    V      P     W    Loss   Acc   Fit\n",
-      "[[56.   24.   40.   40.    0.3   0.42  0.53  0.9   0.83  0.    0.85]\n",
-      " [32.   40.    8.   48.    0.2  -0.35  0.62  0.9   0.69  1.    2.55]]\n",
-      "Population Results Saved :  EXPERIMENT-1616742435/Updated_PopualtionData_2_TIME1616742807.csv\n"
+      "[INFO] model file:  EXPERIMENT-1617194310/64-40-64-16-DP02-VGG19.h5\n",
+      " 46/448 [==>...........................] - ETA: 1:37 - loss: 0.6941 - accuracy: 0.4239"
      ]
     }
    ],
